k8s/test/analyzer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slowquery-analyzer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slowquery-analyzer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: slowquery-analyzer
    spec:
      containers:
        - image: harbor.shopeemobile.com/rds-kube-operator/slowquery-analyzer:v1.1.13
          name: analyzer
          command:
            - "/etc/slowquery/slowquery-analyzer"
            - "--config=/etc/slowquery/config/slowquery-analyzer.toml"
          ports:
          - containerPort: 8098
            name: grpc
            protocol: TCP
          resources:
            limits:
              cpu: "4"
              memory: 4Gi
            requests:
              cpu: 200m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /etc/slowquery/config
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          configMap:
            name: slowquery-analyzer-config
        - name: tmp
          hostPath:
            path: /data/log/analyzer_log
            type: DirectoryOrCreate
      restartPolicy: Always
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: slowquery-analyzer-config
  namespace: default
data:
  slowquery-analyzer.toml: |-
    # ======================
    # clickhouse Config
    # ======================
    [clickhouse_client_config]
    driver = "clickhouse"
    host = "10.173.1.3"
    port = 9092
    user = "staging_szinfra_clouddba-cluster_mpp_poc01_2replicas_online"
    password = "EdW6KfaIkxjc"
    db_name = "szinfra_clouddba_slow_query_test"
    max_idle_conn = 10
    max_open_conn = 15
    [clickhouse_flusher_config]
    batch = 1000
    cycle = "5s"
    # ======================
    # kafka Config
    # ======================
    [kafka_config]
    brokers = ["10.129.116.34:27462", "10.129.116.33:27462", "10.129.116.35:27462", "10.129.116.36:27462", "10.129.116.37:27462", "10.129.116.31:27462"]
    topics = ["rds-slow-query-sg-test"]  # for test mode
    groupID = "slow_query_test"
    # ======================
    # cache Config
    # ======================
    [filter_config]
    satisfaction = 0.0000001   # 百万分之一
    default_cap = 1000000
    # ======================
    # fresh finger filter config
    # ======================
    [fresh_filter_config]
    batch_size = 50000
    cron_spec = "* * * * *"
    count_by_single = 500000
    max_concurrent = 25
    valid_days = 7
    query_lead = "10m"
    # ======================
    # Server Log config
    # ======================
    [server_log_config]
    log_name = "analyzer"
    log_level = "info"
    log_path = "/tmp/log_analyzer"
    log_max_file_size = 500 #单位:MB
    log_max_backups = 10
    log_max_age = 10
    log_compress = true
    # ======================
    # analyzer config
    # ======================
    [analyzer_config]
    keep_hint = true
    # ======================
    # monitor_db_config
    # ======================
    [monitor_db_config]
    username = "sz_infra_test"
    password = "TnOa9kDGlnb_T9cIhg8w"
    host = "master.585e6d8af19775e6.mysql.cloud.test.shopee.io"
    port = 6606
    db_name = "shopee_exec_meta_db"
    log_mode = true
    connect_timeout = 20
    max_idle_conns = 10
    max_open_conns = 50
    error_retry = 3
    # ======================
    # remote_mysql_access
    # ======================
    [remote_mysql_access]
    is_test = false
    user = "shopeeroot"
    key = "XmFZwm12R_buqkxneLw5"
    # ======================
    # cmdb config
    # ======================
    [cmdb_config]
    #live 7hmsd73RMM
    #test J4fww1MbrpJ2
    space_host = "https://space.test.shopee.io"
    dbameta_auth_token = "J4fww1MbrpJ2"
