k8s/test/slowquery-alert-svc-node.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: slowquery-alert
  name: slowquery-alert-svc-node
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      nodePort: 30089
      protocol: TCP
      targetPort: 12345
  selector:
    app: slowquery-alert
  sessionAffinity: None
  type: NodePort
