k8s/test/slowquery-ck-data-exporter-svc-node.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: slowquery-ck-data-exporter
  name: slowquery-ck-data-exporter-svc-node
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9237
    nodePort: 30188
    protocol: TCP
    targetPort: 9237
  selector:
    app: slowquery-ck-data-exporter
  sessionAffinity: None
  type: NodePort
