k8s/test/slowquery_ingress_and_svc.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-server
  namespace: default
spec:
  ingressClassName: contour
  rules:
  - host: xxxx.test.shopee.io
    http:
      paths:
      - backend:
          service:
            name: slowquery-platform-svc
            port:
              number: 8080
        path: /
        pathType: Prefix

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slowquery-platform
  name: slowquery-platform-svc
  namespace: default
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ports:
  - name: "http"
    port: 8080
    protocol: TCP
    targetPort: 12345
  selector:
    app: slowquery-platform
  sessionAffinity: None
  type: ClusterIP
